<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame_et_enterpost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brand_color_2_lighter_more"
    android:visibility="visible"
    tools:context=".EnterNewPostActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_weight="2"
        android:background="@color/highlight_1"
        android:padding="@dimen/container_padding"
        android:text="@string/message_values"
        android:textAlignment="center"
        android:textColor="@color/brand_color_1_secondary"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterpost_etlayout" />

    <ImageView
        android:id="@+id/enterpost_b_cancelpost"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:alpha="0.8"
        android:background="@drawable/ic_cancel"
        android:backgroundTint="@color/colorAccent2"
        android:backgroundTintMode="src_atop"
        android:contentDescription="@string/cancel"
        android:foreground="@drawable/br_custom_ripple_effect"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/enterpost_b_confirmpost"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:alpha="0.8"
        android:background="@drawable/ic_confirm"
        android:backgroundTint="?attr/colorAccent"
        android:backgroundTintMode="src_atop"
        android:contentDescription="@string/confirm"
        android:foreground="@drawable/br_custom_ripple_effect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterpost_etlayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:helperTextEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterpost_b_cancelpost">

        <EditText
            android:id="@+id/enterpost_et_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/post"
            android:importantForAutofill="no"
            android:inputType="textMultiLine" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>