<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/enterinvitation_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brand_color_2_lighter_more"
    tools:context=".EnterNewInvitationActivity">

    <ImageView
        android:id="@+id/enterinvitation_b_cancelinvitation"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:alpha="0.8"
        android:background="@drawable/ic_cancel"
        android:backgroundTint="@color/colorAccent2"
        android:backgroundTintMode="src_atop"
        android:contentDescription="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/enterinvitation_b_confirminvitation"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:alpha="0.8"
        android:background="@drawable/ic_confirm"
        android:backgroundTint="?attr/colorAccent"
        android:backgroundTintMode="src_atop"
        android:contentDescription="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/enterinvitation_etlayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:helperTextEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterinvitation_b_cancelinvitation">

        <EditText
            android:id="@+id/enterinvitation_et_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/hint_invitation"
            android:inputType="textMultiLine"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>